# pyspark-sample

./: Dockerfile  pyproject.toml
app/: app.py
