[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jon Zepernick <jon.zepernick@morningstar.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.0.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

